--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+  html,
+  body {
+    @apply m-0 p-0 bg-white;
+    
+  }
+}
+
 
 :root {
   color-scheme: light;
@@ -14,3 +22,4 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
