--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,14 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
   html,
   body {
-    @apply m-0 p-0 bg-white;
-    
+    @apply m-0 p-0 bg-white font-sans;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-sans;
+  }
+
+  a {
+    @apply font-sans;
   }
 }
-
 
 :root {
   color-scheme: light;
@@ -22,4 +29,3 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
